# axum-test-server

./: Cargo.toml  readme.Md
src/: fruits.rs  generate_keypair.rs  main.rs  satellites.rs
