[package]
name = "axum-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
borsh = { version = "1.5.7", features = ["bytes", "derive"] }
bs58 = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
solana-client = "2.0.0"
solana-sdk = "2.0.0"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
